@@ -288,6 +288,11 @@ class WorkflowToolTests(TestCase, WarningInterceptor):
         tool.setChainForPortalTypes( ('Dummy Content',), '' )
         self.assertEquals( tool.getChainFor(dummy), () )
 
+        # Using the '(Default)' keyword
+        # http://www.zope.org/Collectors/CMF/475
+        tool.setChainForPortalTypes( ('Dummy Content',), '(Default)' )
+        self.assertEquals( tool.getChainFor(dummy), () )
+
     def test_getCatalogVariablesFor( self ):
 
         tool = self._makeWithTypesAndChain()
